--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@supabase/supabase-js": "^2.39.0",
+    "clsx": "^2.0.0",
+    "next": "14.0.3",
+    "next-themes": "^0.2.1",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.3"
+    "react-collapse": "^5.1.1",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-collapse": "^5.0.4",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
