--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@headlessui/react": "^1.7.17",
     "@supabase/supabase-js": "^2.39.0",
     "clsx": "^2.0.0",
+    "latest": "^0.2.0",
+    "n": "^9.2.0",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "react": "^18",
