--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-collapse": "^5.1.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "@types/node": "^20",
