--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-collapse": "^5.1.1",
     "react-dom": "^18",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/node": "^20",
