--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@supabase/supabase-js": "^2.39.0",
     "clsx": "^2.0.0",
     "latest": "^0.2.0",
-    "n": "^9.2.0",
     "next": "14.0.3",
+    "next-intl": "^3.3.2",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-collapse": "^5.1.1",
