--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "latest": "^0.2.0",
     "next": "14.0.3",
     "next-intl": "^3.3.2",
+    "next-seo": "^6.5.0",
     "next-themes": "^0.2.1",
     "npm": "^10.4.0",
     "react": "^18",
